bk_ida/sjengida/c1/gen
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/gen/src/moves.c:1039:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[v5] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/gen/src/moves.c:1056:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[v5] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/gen/src/moves.c:1183:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[v17] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/gen/src/moves.c:1200:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[v17] ) 
     ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/gen/src/obj/moves.o] Error 1
